# toy_datasets

./: .gitignore  README.md  pyproject.toml
data_loaders/: XOR.py  abstract_loader.py  madelon.py  main.py  normal.py  readme.md  truncated_normal.py  utils.py  visulalisation.py
data_loaders/datasets/: costcla_data_extraction.py
data_loaders/datasets/CreditScoring_Kaggle2011_costcla/: cost_matrix.csv
data_loaders/datasets/Habermans_breast_cancer/: data.csv
data_loaders/datasets/breast_cancer_Wisconsin/: data.csv
data_loaders/datasets/cervical_cancer/: description.txt
data_loaders/datasets/chronic_kidney_disease/: data.csv
data_loaders/datasets/hepititus/: data.csv
data_loaders/loaders/: Habermans_breast_cancer.py  MIMIC_III.py  MIMIC_IV.py  abalone_gender.py  banknote.py  breast_cancer_W.py  cervical_cancer.py  chonic_kidney_disease.py  costcla.py  diabetes.py  gaussian.py  german_credit.py  heart_disease.py  hepititus.py  ionosphere.py  mnist.py  sklearn_synthetic.py  sklearn_toy.py  sonar_rocks.py  wheat_seeds.py
data_loaders/synthetic/: XOR.py  madelon.py  normal.py  sklearn_synthetic.py
